# TII-Ion-Drift-Processor

./: .gitignore  CMakeLists.txt  Changes  CrossTrackCalibration.c  CrossTrackCalibration.h  CrossTrackQualityFlagDetermination.c  CrossTrackQualityFlagDetermination.h  CrossTrackValidation.c  CrossTrackValidation.h  LICENSES  README.md  TCT_files_to_transfer.sh  cdf_files_to_compress.sh  cdfbin.c  cdfbin.h  compress_TCT.sh  errors.h  export.c  export.h  indexing.h  list_0301_filenames.sh  loadData.c  loadData.h  lpData.c  lpData.h  parallel_compress_TCT.sh  parallel_process_TCT.sh  process_TCT.sh  processing.c  processing.h  run.sh  sample.c  settings.h  state.h  statistics.c  statistics.h  tiict.c  tiict.h  tiictbin.c  tiictbin.h  (+8 more)
Docker/: Dockerfile  docker-build.sh
examples/: .gitignore  callgrind.out.47142  gmon.out
include/: errors.h  export.h  loadData.h  processing.h  sample.h  settings.h  state.h  utilities.h
util/: CMakeLists.txt
util/tiictParallel/: CMakeLists.txt  main.c
